# puzzler-2021

./: README.md  pyproject.toml
puzzler/: descramble.py  models.py  scramble.py
tests/: test_part_one.py  test_part_two.py
