[tool.poetry]
name = "puzzler-2021"
version = "0.1.0"
description = ""
authors = ["Dan Chalmers <danc@brandwatch.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pipe = "^1.6.0"
pytest = "^6.2.5"
textdistance = {extras = ["DamerauLevenshtein"], version = "^4.2.2"}
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
